[workspace]
members = [
    "slipway_engine",
    "slipway",
    "common_test_utils",
    "slipway_wasmtime_runner",
    "slipway_host",
    "slipway_fragment_runner",
    "slipway_js_deno_runner",
    "slipway_js_boa_runner",
    "common_macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James Thurley"]

[workspace.dependencies]
float-cmp = "0.10.0"
mockall = "0.13.1"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "2.0.11"
semver = { version = "1.0.25", features = ["serde"] }
jtd = "0.3.1"
tracing = "0.1.41"
anyhow = "1.0.95"
url = "2.5.4"
tiny_http = "0.12.0"
tar = "0.4.43"
walkdir = "2.5.0"
indoc = "2.0.5"
paste = "1.0.15"
async-trait = "0.1.86"
pollster = "0.4.0"
tokio = { version = "1.43.0", features = ["macros", "rt"] }
test-log = { version = "0.2.16", features = ["trace"] }
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["stream"] }
regex = "1.9.5"
sha2 = "0.10.8"
