[workspace]
members = [
    "slipway_engine",
    "slipway",
    "common_test_utils",
    "slipway_wasmtime_runner",
    "slipway_host",
    "slipway_fragment_runner",
    "slipway_js_boa_runner",
    "common_macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["James Thurley"]

[workspace.dependencies]
slipway_engine = { path = "./slipway_engine" }
slipway_host = { path = "./slipway_host" }
slipway_wasmtime_runner = { path = "./slipway_wasmtime_runner" }
slipway_fragment_runner = { path = "./slipway_fragment_runner" }
slipway_js_boa_runner = { path = "./slipway_js_boa_runner" }
common_test_utils = { path = "./common_test_utils" }
common_macros = { path = "./common_macros" }
float-cmp = "0.10.0"
mockall = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.5.1", default-features = false, features = ["std"] }
thiserror = "2.0.12"
semver = { version = "1.0.25", features = ["serde"] }
jtd = "0.3.1"
tracing = "0.1.41"
anyhow = "1.0.97"
url = { version = "2.5.4", features = ["serde"] }
tiny_http = "0.12.0"
tar = "0.4.44"
walkdir = "2.5.0"
indoc = "2.0.6"
paste = "1.0.15"
async-trait = "0.1.87"
pollster = "0.4.0"
tokio = { version = "1.43.0", features = ["macros", "rt"] }
test-log = { version = "0.2.17", features = ["trace"] }
futures = "0.3.31"
reqwest = { version = "0.12.14", features = ["stream"] }
regex = "1.9.5"
sha2 = "0.10.8"
wasmtime = "27.0.0"
wasmtime-wasi = "27.0.0"
wasi-common = "27.0.0"
bytes = "1.8.0"
futures-concurrency = "7.6.3"
futures-lite = "2.6.0"
base64 = "0.22.1"
fontique = "0.2.0"
jsonpath-rust = "0.7.0"
jsonschema = { version = "0.29.0", default-features = false, features = [
    "resolve-async",
] }
dirs = "5.0.1"
fluent-uri = "0.3.2"
tokio-util = "0.7.13"
tempfile = "3.13.0"
termion = "4.0.0"
ctrlc = "3.4.2"
edit = "0.1.5"
tracing-subscriber = "0.3.18"
viuer = "0.9.1"
image = "0.25.2"
time = "0.3.37"
actix-web = "4.9.0"
once_cell = "1.20.3" # required for conflict between boa and actix-web
chrono = "0.4.39"
nanoid = "0.4.0"
chrono-tz = "0.10.1"
croner = "2.1.0"
actix-cors = "0.7.0"
iana-time-zone = "0.1.61"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
boa_engine = { git = "https://github.com/boa-dev/boa", branch = "main", package = "boa_engine", features = [
    "annex-b",
    "experimental",
] }
boa_runtime = { git = "https://github.com/boa-dev/boa", branch = "main", package = "boa_runtime" }
boa_macros = { git = "https://github.com/boa-dev/boa", branch = "main", package = "boa_macros" }
boa_gc = { git = "https://github.com/boa-dev/boa", branch = "main", package = "boa_gc" }
