[workspace]
members = [
    "slipway_engine",
    "slipway",
    "common_test_utils",
    "slipway_wasmtime_runner",
    "slipway_host",
    "slipway_fragment_runner",
    "slipway_js_boa_runner",
    "common_macros",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["James Thurley"]

[workspace.dependencies]
slipway_engine = { path = "./slipway_engine" }
slipway_host = { path = "./slipway_host" }
slipway_wasmtime_runner = { path = "./slipway_wasmtime_runner" }
slipway_fragment_runner = { path = "./slipway_fragment_runner" }
slipway_js_boa_runner = { path = "./slipway_js_boa_runner" }
common_test_utils = { path = "./common_test_utils" }
common_macros = { path = "./common_macros" }
float-cmp = "0.10.0"
mockall = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", default-features = false, features = [
    "std",
] }
thiserror = "2.0.12"
semver = { version = "1.0.26", features = ["serde"] }
jtd = "0.3.1"
tracing = "0.1.41"
anyhow = "1.0.97"
url = { version = "2.5.4", features = ["serde"] }
tiny_http = "0.12.0"
tar = "0.4.44"
walkdir = "2.5.0"
indoc = "2.0.6"
paste = "1.0.15"
async-trait = "0.1.87"
pollster = "0.4.0"
tokio = { version = "1.44.1", features = ["macros", "rt"] }
test-log = { version = "0.2.17", features = ["trace"] }
futures = "0.3.31"
reqwest = { version = "0.12.14", features = ["stream"] }
regex = "1.11.1"
sha2 = "0.10.8"
wasmtime = "30.0.2"
wasmtime-wasi = "30.0.2"
wasi-common = "30.0.2"
bytes = "1.10.0"
futures-concurrency = "7.6.3"
futures-lite = "2.6.0"
base64 = "0.22.1"
fontique = "0.3.0"
jsonpath-rust = "0.7.5"
jsonschema = { version = "0.29.0", default-features = false, features = [
    "resolve-async",
] }
dirs = "6.0.0"
fluent-uri = "0.3.2"
tokio-util = "0.7.14"
tempfile = "3.18.0"
termion = "4.0.4"
ctrlc = "3.4.5"
edit = "0.1.5"
tracing-subscriber = "0.3.19"
viuer = "0.9.1"
image = "0.25.5"
time = "0.3.39"
actix-web = "4.10.2"
once_cell = "1.21.0" # required for conflict between boa and actix-web
chrono = "0.4.40"
nanoid = "0.4.0"
chrono-tz = "0.10.1"
croner = "2.1.0"
actix-cors = "0.7.1"
iana-time-zone = "0.1.61"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
normalize-path = "0.2.1"
assert_cmd = "2.0.16"
clap = "4.3.22"
nix = "0.29.0"
boa_engine = { git = "https://github.com/boa-dev/boa", rev = "29e6fc1", package = "boa_engine", features = [
    "annex-b",
    "experimental",
    "intl_bundled",
] }
boa_runtime = { git = "https://github.com/boa-dev/boa", rev = "29e6fc1", package = "boa_runtime" }
boa_macros = { git = "https://github.com/boa-dev/boa", rev = "29e6fc1", package = "boa_macros" }
boa_gc = { git = "https://github.com/boa-dev/boa", rev = "29e6fc1", package = "boa_gc" }
target-lexicon = "0.13.2"
hmac = "0.12.1"
rpassword = "7.3"
openssl = { version = "0.10.72" }
sys-locale = "0.3.2"
