[workspace]
members = [
    "slipway_increment_component",
    "slipway_component_file_component",
    "slipway_fetch_component",
    "slipway_font_component",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James Thurley"]

[workspace.dependencies]
wit-bindgen = "0.37.0"
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
