[package]
name = "slipway-test-component"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
