[package]
name = "slipway-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.22", features = ["derive"] }
slipway-lib = { path = "../slipway-lib", features = ["internal"] }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.6.4"
termion = "3.0.0"
