[package]
name = "slipway-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1.73"
itertools = "0.12.1"
jsonpath-rust = "0.4.0"
jtd = { workspace = true }
once_cell = "1.18.0"
regex = "1.9.5"
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { version = "3.5.1", default-features = false, features = ["std"] }
sha2 = "0.10.8"
thiserror = { workspace = true }
tokio = { version = "1.36.0", features = ["full"] }
url = "2.4.1"

[features]
unstable-test-utils = []
