[package]
name = "slipway-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1.73"
itertools = "0.13.0"
jsonpath-rust = "0.6.0"
jtd = { workspace = true }
once_cell = "1.18.0"
regex = "1.9.5"
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { version = "3.5.1", default-features = false, features = ["std"] }
sha2 = "0.10.8"
thiserror = { workspace = true }
url = "2.4.1"
tracing = { workspace = true }
jsonschema = { version = "0.20.0", default-features = false }
ureq = { version = "2.10.1", features = ["json"] }
anyhow = { workspace = true }

[features]
unstable-test-utils = []

[dev-dependencies]
tiny_http = "0.12.0"
