[package]
name = "slipway"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.3.22", features = ["derive", "color"] }
slipway_engine = { path = "../slipway_engine", features = [
    "unstable-test-utils",
] }
slipway_host = { path = "../slipway_host" }
slipway_wasmtime_runner = { path = "../slipway_wasmtime_runner" }
slipway_fragment_runner = { path = "../slipway_fragment_runner" }
slipway_deno_runner = { path = "../slipway_deno_runner" }
serde = { workspace = true }
serde_json = { workspace = true }
termion = "4.0.0"
ctrlc = "3.4.2"
edit = "0.1.5"
thiserror = { workspace = true }
anyhow = { workspace = true }
semver = { workspace = true }
jtd = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.18"
viuer = { version = "0.8.1", features = ["sixel"] }
base64 = "0.22.1"
image = "0.25.2"
time = { version = "0.3.37", features = ["formatting"] }
url = { workspace = true }
tar = { workspace = true }
walkdir = { workspace = true }
paste = "1.0.15"

[dev-dependencies]
common_test_utils = { path = "../common_test_utils" }
