[package]
name = "slipway"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "color"] }
slipway_engine = { workspace = true, features = ["unstable-test-utils"] }
slipway_host = { workspace = true }
slipway_wasmtime_runner = { workspace = true }
slipway_fragment_runner = { workspace = true }
slipway_js_boa_runner = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
termion = { workspace = true }
ctrlc = { workspace = true }
edit = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
semver = { workspace = true }
jtd = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
viuer = { workspace = true, features = ["sixel"] }
base64 = { workspace = true }
image = { workspace = true }
time = { workspace = true, features = ["formatting"] }
url = { workspace = true }
tar = { workspace = true }
walkdir = { workspace = true }
paste = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
actix-web = { workspace = true }
once_cell = { workspace = true }                                          # required for conflict between boa and actix-web
chrono = { workspace = true, features = ["serde"] }
nanoid = { workspace = true }
chrono-tz = { workspace = true, features = ["serde"] }
croner = { workspace = true }
actix-cors = { workspace = true }
iana-time-zone = { workspace = true }
indoc = { workspace = true }
hmac = { workspace = true }

[dev-dependencies]
common_test_utils = { workspace = true }
common_macros = { workspace = true }
test-log = { workspace = true }
assert_cmd = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
indoc = { workspace = true }
nix = { workspace = true }
