[package]
name = "slipway_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1.73"
jsonpath-rust = "0.7.0"
jtd = { workspace = true }
regex = "1.9.5"
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { version = "3.5.1", default-features = false, features = ["std"] }
sha2 = "0.10.8"
thiserror = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
jsonschema = { version = "0.29.0", default-features = false, features = [
    "resolve-async",
] }
ureq = { workspace = true }
anyhow = { workspace = true }
tar = { workspace = true }
dirs = "5.0.1"
tokio = { workspace = true }
futures = { workspace = true }
fluent-uri = "0.3.2"

[features]
unstable-test-utils = []

[dev-dependencies]
tiny_http = "0.12.0"
walkdir = { workspace = true }
common_test_utils = { path = "../common_test_utils" }
common_macros = { path = "../common_macros" }
tempfile = "3.13.0"
test-log = { version = "0.2.16", features = ["trace"] }
