[package]
name = "slipway_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
jsonpath-rust = { workspace = true }
jtd = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
anyhow = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
fluent-uri = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
normalize-path = { workspace = true }
tempfile = { workspace = true }

[features]
unstable-test-utils = []

[dev-dependencies]
tiny_http = { workspace = true }
walkdir = { workspace = true }
common_test_utils = { workspace = true }
common_macros = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
