[package]
name = "slipway_fragment_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
slipway_engine = { workspace = true, features = [] }
slipway_host = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
