[package]
name = "slipway_host"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
fontique = "0.2.0"
slipway_engine = { path = "../slipway_engine", features = [
    "unstable-test-utils",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
semver = { workspace = true }
base64 = "0.22.1"

[dev-dependencies]
common_test_utils = { path = "../common_test_utils" }
slipway_wasmtime_runner = { path = "../slipway_wasmtime_runner" }
slipway_fragment_runner = { path = "../slipway_fragment_runner" }
test-log = { version = "0.2.16", features = ["trace"] }
