[package]
name = "slipway_host"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
fontique = { workspace = true }
slipway_engine = { workspace = true, features = ["unstable-test-utils"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
pollster = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
common_test_utils = { path = "../common_test_utils" }
common_macros = { path = "../common_macros" }
slipway_wasmtime_runner = { path = "../slipway_wasmtime_runner" }
slipway_js_boa_runner = { path = "../slipway_js_boa_runner" }
slipway_fragment_runner = { path = "../slipway_fragment_runner" }
test-log = { workspace = true }
