[package]
name = "slipway_js_boa_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
slipway_engine = { path = "../slipway_engine", features = [] }
slipway_host = { path = "../slipway_host", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
boa_engine = { path = "../../../boa_fork/core/engine", features = [
    "annex-b",
    "experimental",
] }
boa_runtime = { path = "../../../boa_fork/core/runtime" }
boa_macros = { path = "../../../boa_fork/core/macros" }
boa_gc = { path = "../../../boa_fork/core/gc" }
pollster = "0.4.0"
anyhow = { workspace = true }
indoc = { workspace = true }
paste = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures-concurrency = "7.6.3"
futures-lite = "2.6.0"
