[package]
name = "slipway_js_boa_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
slipway_engine = { path = "../slipway_engine", features = [] }
slipway_host = { path = "../slipway_host", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
boa_engine = { git = "https://github.com/boa-dev/boa", branch = "main", package = "boa_engine", features = [
    "annex-b",
    "experimental",
] }
boa_runtime = { git = "https://github.com/boa-dev/boa", branch = "main", package = "boa_runtime" }
boa_macros = { git = "https://github.com/boa-dev/boa", branch = "main", package = "boa_macros" }
boa_gc = { git = "https://github.com/boa-dev/boa", branch = "main", package = "boa_gc" }
pollster = "0.4.0"
anyhow = { workspace = true }
indoc = { workspace = true }
paste = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures-concurrency = "7.6.3"
futures-lite = "2.6.0"
