[package]
name = "slipway_js_boa_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
slipway_engine = { workspace = true, features = [] }
slipway_host = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
boa_engine = { workspace = true }
boa_runtime = { workspace = true }
boa_macros = { workspace = true }
boa_gc = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
indoc = { workspace = true }
paste = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures-concurrency = { workspace = true }
futures-lite = { workspace = true }
