[package]
name = "slipway_js_deno_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
deno_core = "0.325.0"
slipway_engine = { path = "../slipway_engine", features = [] }
slipway_host = { path = "../slipway_host", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
