[package]
name = "slipway_wasmtime_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wasmtime = { version = "27.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "27.0.0" }
wasi-common = "27.0.0"
bytes = "1.8.0"
async-trait = "0.1.83"
slipway_engine = { path = "../slipway_engine", features = [] }
slipway_host = { path = "../slipway_host", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
