[package]
name = "slipway_wasmtime_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
slipway_engine = { workspace = true, features = [] }
slipway_host = { workspace = true, features = [] }
wasmtime = { workspace = true, features = ["component-model", "async"] }
wasmtime-wasi = { workspace = true }
wasi-common = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
